kubernetes/backend-network.yaml
apiVersion: v1
kind: Service
metadata:
  name: ship-manager-backend
spec:
  selector:
    app: ship-manager-backend
  ports:
    - name: http
      port: 80
      targetPort: 3000
# ---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: ship-manager-backend
#   annotations:
#     kubernetes.io/ingress.class: addon-http-application-routing
# spec:
#   rules:
#     - host: ship-manager-backend.DNS_ZONE
#       http:
#         paths:
#           - path: /
#             backend:
#               serviceName: ship-manager-backend
#               servicePort: http
